<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorful_background"
    tools:context=".MyConditions">

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="111dp"
        android:layout_height="77dp"
        android:src="@drawable/logo_final"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CholesterolHDLTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/ChoHDLTv"
        app:layout_constraintStart_toStartOf="@+id/blSugarTv"
        app:layout_constraintTop_toBottomOf="@+id/blSugarTv" />

    <TextView
        android:id="@+id/blPressureTv"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#93E6B4"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/blSugarTv"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#93E6B4"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/ChoHDLTv"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#93E6B4"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/ChoLDLTv"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#93E6B4"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/TriglyTv"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#93E6B4"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BloodPressureTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/blPressureTv"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="53dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BloodSugarTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/blSugarTv"
        app:layout_constraintStart_toStartOf="@+id/blPressureTv"
        app:layout_constraintTop_toBottomOf="@+id/blPressureTv" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TriglyceridesTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/TriglyTv"
        app:layout_constraintStart_toStartOf="@+id/ChoLDLTv"
        app:layout_constraintTop_toBottomOf="@+id/ChoLDLTv" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CholesterolLDLTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/ChoLDLTv"
        app:layout_constraintStart_toStartOf="@+id/ChoHDLTv"
        app:layout_constraintTop_toBottomOf="@+id/ChoHDLTv" />

</androidx.constraintlayout.widget.ConstraintLayout>