<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorful_background"
    tools:context=".MaintainTips">

    <ImageView
        android:id="@+id/icon_logo"
        android:layout_width="111dp"
        android:layout_height="77dp"
        android:src="@drawable/logo_final"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/blPressMt"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#93E6B4"
        android:text="@string/BloodPressureTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/blSugarMt"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#93E6B4"
        android:text="@string/BloodSugarTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/ChoHDLMt"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#93E6B4"
        android:text="@string/CholesterolHDLTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/ChoLDLMt"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:background="#93E6B4"
        android:text="@string/CholesterolLDLTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/TriMt"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:background="#93E6B4"
        android:text="@string/TriglyceridesTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BloodPressureTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/blPressMt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BloodSugarTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/blSugarMt"
        app:layout_constraintStart_toStartOf="@+id/blSugarMt"
        app:layout_constraintTop_toBottomOf="@+id/blPressMt" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CholesterolHDLTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/ChoHDLMt"
        app:layout_constraintStart_toStartOf="@+id/ChoHDLMt"
        app:layout_constraintTop_toBottomOf="@+id/blSugarMt" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CholesterolLDLTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/ChoLDLMt"
        app:layout_constraintStart_toStartOf="@+id/ChoLDLMt"
        app:layout_constraintTop_toBottomOf="@+id/ChoHDLMt" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TriglyceridesTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/TriMt"
        app:layout_constraintStart_toStartOf="@+id/TriMt"
        app:layout_constraintTop_toBottomOf="@+id/ChoLDLMt" />

</androidx.constraintlayout.widget.ConstraintLayout>